# IntelliKit

./: .env  .gitignore  Dockerfile  README.md  REQUIREMENTS.md  diqs.session.sql  docker-compose.yml  get_help.py  helper.py  pyproject.toml  pytest.ini  requirements.txt  run_app.py  run_gpt_task.py  sonar-project.properties  structure.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  gpt-action.yml  sonarcloud.yml
app/: README.md  addpath.py  alembic.ini  config.py  database.py  exceptions.py  logging.ini  main.py  models.py  pagination.py  schemas.py  test_main.py
app/alembic/: env.py
app/alembic/versions/: 12aaba051461_initial_migration.py  2024_08_16_2105-21f4cdd691c5_initial.py  2024_08_16_2113-7a1a11bc296c_split_first_and_last.py  2024_08_17_0145-40dc69134d56_change_id.py  2024_08_17_2127-886b093b6c2f_change_user_id_to_uuid.py  (+10 more)
app/api/: deps.py
app/auth/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_imported_data.py  crud_user.py  crud_validation_result.py  crud_validation_rule.py  crud_validaton_result.py
app/db/: __init__.py  base_class.py  session.py
app/models/: __init__.py  imported_data.py  user.py  validation_result.py  validation_rule.py
app/routers/: data_import.py
app/schemas/: __init__.py  imported_data.py  token.py  user.py  validation_result.py  validation_rule.py
app/utils/: validators.py
app/validator/: __init__.py  models.py  router.py  schemas.py  service.py
backend/: pyproject.toml  run_migrations.py
backend/app/: config.py  database.py  main.py  models.py
backend/tests/: conftest.py
db_init/: populate_db.py
frontend/: package-lock.json  package.json
tests/: conftest.py  test_data_import.py  test_main.py  test_models.py  test_schemas.py
tests/auth/: test_main_auth.py
tests/normalizer/: test_schemas.py
tests/validator/: test_models.py  test_models_validator.py  test_schemas.py
(+20 files in other folders)
