[tool.poetry]
name = "intellikit"
version = "0.1.0"
description = "For doing stuff"
authors = ["Trav <travis.vas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.112.1"}
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pyjwt = {extras = ["crypto"], version = "^2.3.0"}
passlib = "^1.7.4"
pandas = "^2.2.2"
chardet = "^5.2.0"
python-dotenv = "^1.0.1"
pytest = "^8.3.2"
ecdsa = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
